@@ -1,94 +1,55 @@
 package com.biblioswipe.backend.service;
 
-import java.util.List;
-
 import com.biblioswipe.backend.dto.PerfilDTO;
 import com.biblioswipe.backend.dto.PerfilUpdateDTO;
-import com.biblioswipe.backend.mapper.PerfilMapper;
-import com.biblioswipe.backend.model.Usuario;
-import com.biblioswipe.backend.repository.UsuarioRepository;
-import org.springframework.beans.factory.annotation.Autowired;
-
 import com.biblioswipe.backend.model.Perfil;
 import com.biblioswipe.backend.repository.PerfilRepository;
-import org.springframework.http.HttpStatus;
+import com.biblioswipe.backend.repository.UsuarioRepository;
+
+import java.util.List;
+import java.util.stream.Collectors;
+
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import org.springframework.web.server.ResponseStatusException;
+import org.springframework.transaction.annotation.Transactional;
 
 @Service
 public class PerfilService {
+
     private final PerfilRepository perfilRepository;
     private final UsuarioRepository usuarioRepository;
-    private final PerfilMapper perfilMapper;
 
     @Autowired
-    public PerfilService(
-            PerfilRepository perfilRepository,
-            UsuarioRepository usuarioRepository,
-            PerfilMapper perfilMapper
-    ) {
+    public PerfilService(PerfilRepository perfilRepository,
+                         UsuarioRepository usuarioRepository) {
         this.perfilRepository = perfilRepository;
         this.usuarioRepository = usuarioRepository;
-        this.perfilMapper = perfilMapper;
     }
 
-    // METODOS CRUD
-    // obtener un perfil en concreto por id
-    // BIEN
+    /**
+     * Obtiene el perfil asociado a un usuario usando la Query personalizada
+     */
+    @Transactional(readOnly = true)
     public PerfilDTO getPerfilByUsuario(Long usuarioId) {
+        // 🎯 Llama al método con @Query de tu PerfilRepository
+        Perfil perfil = perfilRepository.findByUsuario_Id(usuarioId)
+                .orElseThrow(() ->
+                        new RuntimeException("Perfil no encontrado para usuarioId: " + usuarioId)
+                );
 
-        Usuario usuario = usuarioRepository.findById(usuarioId)
-                .orElseThrow(() -> new ResponseStatusException(
-                        HttpStatus.NOT_FOUND,
-                        "Usuario no encontrado"
-                ));
-
-        if (usuario.getPerfil() == null) {
-            throw new ResponseStatusException(
-                    HttpStatus.NOT_FOUND,
-                    "El usuario no tiene perfil"
-            );
-        }
-
-        return perfilMapper.toDTO(usuario.getPerfil());
+        return toDTO(perfil);
     }
 
-    // crear perfil (para el create usuario)
-    // no dto ya que trabaja dentro de otro servicio este metodo
-    // BIEN
-    public Perfil crearPerfilInicial(Usuario usuario) {
-
-        Perfil perfil = new Perfil();
-        perfil.setUsuario(usuario);
-
-        // valores por defecto
-        perfil.setNombre("");
-        perfil.setApellidos("");
-        perfil.setCiudad("");
-        perfil.setFotoPerfil(null);
-        perfil.setFechaNacimiento(null);
-
-        return perfilRepository.save(perfil);
-    }
-
-    // actualizar perfil concreto
-    // BIEN
+    /**
+     * Actualiza el perfil asociado a un usuario
+     */
+    @Transactional
     public PerfilDTO actualizarPerfil(Long usuarioId, PerfilUpdateDTO dto) {
-
-        Usuario usuario = usuarioRepository.findById(usuarioId)
-                .orElseThrow(() -> new ResponseStatusException(
-                        HttpStatus.NOT_FOUND,
-                        "Usuario no encontrado"
-                ));
-
-        Perfil perfil = usuario.getPerfil();
-
-        if (perfil == null) {
-            throw new ResponseStatusException(
-                    HttpStatus.NOT_FOUND,
-                    "El usuario no tiene perfil"
-            );
-        }
+        // 🎯 Llama al método con @Query para encontrar el perfil a editar
+        Perfil perfil = perfilRepository.findByUsuario_Id(usuarioId)
+                .orElseThrow(() ->
+                        new RuntimeException("Perfil no encontrado para usuarioId: " + usuarioId)
+                );
 
         perfil.setNombre(dto.getNombre());
         perfil.setApellidos(dto.getApellidos());
@@ -96,19 +57,36 @@ public class PerfilService {
         perfil.setFechaNacimiento(dto.getFechaNacimiento());
         perfil.setFotoPerfil(dto.getFotoPerfil());
 
-        return perfilMapper.toDTO(perfilRepository.save(perfil));
+        Perfil perfilActualizado = perfilRepository.save(perfil);
+
+        return toDTO(perfilActualizado);
     }
 
-
-    // METODOS DE LÓGICA DE NEGOCIO
-    // localizar perfiles con la misma ciudad
-    // NO NECESARIO SE SUPONE !!!!!
+    /**
+     * Busca perfiles por ciudad para mostrar a otros usuarios
+     */
+    @Transactional(readOnly = true)
     public List<PerfilDTO> findByCiudad(String ciudad) {
-        return perfilRepository.findByCiudadIgnoreCase(ciudad)
-                .stream()
-                .map(perfilMapper::toDTO)
-                .toList();
+        // 1. Obtenemos la lista de entidades Perfil desde el repositorio
+        List<Perfil> perfiles = perfilRepository.findByCiudad(ciudad);
+
+        // 2. Convertimos cada Perfil en un PerfilDTO
+        return perfiles.stream()
+                .map(this::toDTO)
+                .collect(Collectors.toList());
+    }
+
+    /**
+     * Convierte entidad Perfil a DTO para enviar al Frontend de Android
+     */
+    private PerfilDTO toDTO(Perfil perfil) {
+        return new PerfilDTO(
+                perfil.getPerfil_id(),
+                perfil.getNombre(),
+                perfil.getApellidos(),
+                perfil.getFechaNacimiento(),
+                perfil.getCiudad(),
+                perfil.getFotoPerfil()
+        );
     }
 }
-
-
